--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="10dp"
         android:alpha="0.9"
-        android:background="@drawable/album"
+        android:background="@drawable/write_list_background"
         android:clickable="true"
         android:minHeight="200dp"
         android:orientation="vertical"
