--- a/app/src/main/res/layout/monthly_viewpager.xml
+++ b/app/src/main/res/layout/monthly_viewpager.xml
@@ -9,7 +9,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentLeft="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
