--- a/app/src/main/res/layout/calendar_dialog.xml
+++ b/app/src/main/res/layout/calendar_dialog.xml
@@ -2,53 +2,70 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="400dp">
+    android:layout_height="200dp">
 
     <LinearLayout
-        android:background="@color/color_Lite_Gray"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_Lite_Gray"
         android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:background="@color/colorPrimary">
+            android:layout_weight="2"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
             <TextView
-                android:textSize="12sp"
-                android:textColor="@color/color_Black"
-                android:layout_marginLeft="12dp"
-                android:gravity="left|center"
                 android:id="@+id/calender_dialog_Title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_marginLeft="12dp"
+                android:layout_weight="1"
+                android:gravity="left|center"
+                android:textColor="@color/color_Black"
+                android:textSize="12sp" />
 
             <ImageView
-                android:layout_margin="5dp"
-                android:layout_weight="5"
                 android:id="@+id/calender_dialog_submit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="8dp"
                 android:layout_marginRight="12dp"
+                android:layout_weight="5"
                 app:srcCompat="@drawable/checked_image" />
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+           android:layout_weight="2"
+
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:text="--소중한 D-day 일정을 입력해주세요--"
+                android:textColor="@color/color_Black"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
         <EditText
-            android:textColor="@color/color_Black"
-            android:background="@null"
+            android:layout_margin="12dp"
             android:id="@+id/calender_dialog_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@null"
             android:gravity="top|left"
-            android:scrollHorizontally="false"
             android:inputType="textMultiLine"
-            android:lines="5" />
+            android:lines="5"
+            android:scrollHorizontally="false"
+            android:textColor="@color/color_Black" />
 
     </LinearLayout>
 
