--- a/app/src/main/res/layout/drawitem.xml
+++ b/app/src/main/res/layout/drawitem.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="70dp"
     android:orientation="vertical"
+    android:background="@color/color_White"
     >
     <view
         android:background="@color/color_Lite_Gray"
@@ -10,7 +11,8 @@
         android:layout_width="match_parent"
         />
     <TextView
-        android:id="@+id/ddaycontent"
+        android:textColor="@color/color_Black"
+        android:id="@+id/dday_content"
         android:background="@color/color_White"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
