--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawlayout_recyclerview"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="right"
         android:background="@color/color_White"
