--- a/app/src/main/res/layout/drawitem.xml
+++ b/app/src/main/res/layout/drawitem.xml
@@ -2,27 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@color/color_White"
     >
-    <view
-        android:background="@color/color_Lite_Gray"
-        android:layout_height="1dp"
-        android:layout_width="match_parent"
-        />
+
     <TextView
         android:gravity="center"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:text="adasdsd"
         android:textColor="@color/color_Black"
         android:id="@+id/dday_content"
+        android:layout_weight="1"
         android:background="@color/color_White"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
-    <view
-        android:background="@color/color_Lite_Gray"
-        android:layout_height="1dp"
+    <TextView
+        android:gravity="center"
+        android:textSize="16sp"
+        android:text="adasdsd"
+        android:textColor="@color/color_Black"
+        android:id="@+id/dday_time"
+        android:layout_weight="1"
+        android:background="@color/color_White"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
 </LinearLayout>
