파이어베이스와 스토리지 연동 로그인화면(회원가입 추가) 유저정보 (유저 사진 변경 가능 - 갤러리) 유저-친구(친구추가 친구삭제 기능)

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -10,4 +10,14 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:id="@+id/chat_recycleview"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
