--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="color_Black">#000000</color>
     <color name="color_White">#ffffff</color>
     <color name="color_Lite_Gray">#ececec</color>
+    <color name="fabPrimary">#45A1F5</color>
+    <color name="fabPressed">#6EB5F7</color>
+    <color name="fabRipple">#AED6FC</color>
 </resources>
