그룹(방)만들기 기존 친구목록 로직 수정 -> 방을 먼저 만들고 그곳에 대해 초대를 보내는 구조로 변경 파이어베이스 room 생성

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,11 +7,55 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/home_relativeLayout"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:text="" />
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:visibility="invisible">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="속해있는 그룹이 없습니다."
+        android:id="@+id/text1"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="그룹을 생성해주세요."
+        android:layout_below="@+id/text1"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"/>
+
+
+    <Button
+        android:id="@+id/room_create_btn"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/button2"
+        android:onClick="checkLogin"
+        android:text="Create Group"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:layout_below="@+id/text2"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="25dp"/>
+
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/home_frameLayout">
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_joinstate_recycleview"
@@ -30,6 +74,7 @@
         android:src="@drawable/ic_alarm_add_black_24dp"
         fab:fab_colorNormal="@color/fabPrimary"
         fab:fab_colorPressed="@color/fabPressed"
-        fab:fab_colorRipple="@color/fabRipple"/>
-
+        fab:fab_colorRipple="@color/fabRipple"
+        />
+    </FrameLayout>
 </FrameLayout>
