--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_White"
     >
     <TextView
-        android:textColor="@color/color_Black"
-        android:text="chat"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/color_Gray"
+        android:textSize="20sp"
+        android:text="family 를 추가해 보세요!"
+        android:id="@+id/chatroom_isnull"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         />
-
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:id="@+id/chat_recycleview"
+        android:layout_height="match_parent"
+        android:id="@+id/chatroom_recycleview"
         android:layout_margin="5dp"
         android:padding="5dp"
         >
 
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</RelativeLayout>
