사용자 이미지변경 -> 친구화면에서도 변경

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
                 android:hint="아이디"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:text="+821090835389"
                 android:id="@+id/login_edit_id_text"/>
 
 
