--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,5 +116,17 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/button"/>
 
+        <Button
+            android:id="@+id/pratice"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:text="pratice"
+            android:textStyle="italic"
+            android:layout_below="@+id/login_register"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button"
+            android:onClick="showNotification"/>
+
     </RelativeLayout>
 </LinearLayout>
