--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,11 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dday"
+                android:gravity="center"
+                android:textColor="@color/color_Black"
+                android:textSize="24sp"
+                android:text="방 이름"
+                android:id="@+id/main_room_name"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
