--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -14,6 +14,19 @@
         android:layout_height="match_parent"
         android:id="@+id/home_frameLayout">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/first_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="날짜"
+                android:textAlignment="center"/>
+
         <!-- TODO: Update blank fragment layout -->
         <android.support.v7.widget.RecyclerView
             app:layoutManager="StaggeredGridLayoutManager"
@@ -26,6 +39,7 @@
 
         </android.support.v7.widget.RecyclerView>
 
+        </LinearLayout>
         <com.melnykov.fab.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
