--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -24,6 +24,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_weight="7"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                >
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab1"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    />
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab2"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    />
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab3"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    />
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:backgroundTint="@color/color_Gray"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    />
+            </RelativeLayout>
             <EditText
                 android:id="@+id/input"
                 android:background="@color/color_White"
