--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_White"
     >
-    <TextView
+  <!--  <TextView
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="@color/color_Gray"
@@ -13,7 +13,7 @@
         android:id="@+id/chatroom_isnull"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        />
+        />-->
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
