--- a/app/src/main/res/layout/chat_item_me.xml
+++ b/app/src/main/res/layout/chat_item_me.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="5dp">
 
         <RelativeLayout
@@ -33,5 +33,17 @@
                 android:textColor="@color/color_White"
                 android:textSize="18dp" />
         </RelativeLayout>
+        <TextView
+            android:layout_marginRight="12dp"
+            android:gravity="right"
+            android:text="asdasd"
+            android:textSize="14sp"
+            android:textColor="@color/color_Gray"
+            android:id="@+id/time"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
     </LinearLayout>
+
 </RelativeLayout>
