--- a/app/src/main/res/layout/chat_item_other.xml
+++ b/app/src/main/res/layout/chat_item_other.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/chat_other_img"
+        android:layout_gravity="center"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:padding="4dp">
 
@@ -16,35 +24,36 @@
             android:tint="@color/color_Main"
             app:srcCompat="@drawable/ic_account_circle_black_40dp" />
 -->     <TextView
-        android:textSize="14sp"
-        android:textColor="@color/color_Gray"
         android:id="@+id/otherName"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        />
-        <RelativeLayout
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:textColor="@color/color_Gray"
+        android:textSize="14sp" />
 
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="16dp"
+            android:background="@drawable/speech_bubble_your"
+            android:paddingBottom="5dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="5dp"
+            android:text="asd"
+            android:textColor="@color/color_Black"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/speech_bubble_your"
-                android:paddingBottom="5dp"
-                android:paddingTop="5dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:textSize="18dp"
-                android:text="asd"
-                android:textColor="@color/color_Black" />
-        </RelativeLayout>
+            android:textColor="@color/color_Gray"
+            android:textSize="14sp" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
