--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -86,10 +86,12 @@
             android:id="@+id/user_info_edit"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginRight="50dp"
             android:src="@drawable/user_edit"
-            />
+            android:layout_gravity="center"/>
+        <!--android:layout_gravity="center_horizontal"
+            android:layout_marginRight="50dp"-->
+
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_info_delete"
             android:layout_width="70dp"
@@ -97,6 +99,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="50dp"
             android:src="@drawable/user_delete"
+            android:visibility="invisible"
             />
 
     </FrameLayout>
