--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -21,14 +21,14 @@
             android:orientation="vertical">
 
 
-            <TextView
+           <!-- <TextView
                 android:id="@+id/first_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="가족 앨범"
                 android:textSize="25dp"
                 android:textAlignment="center"
-                android:background="#FFEBFE"/>
+                android:background="#FFEBFE"/>-->
 
         <!-- TODO: Update blank fragment layout -->
         <android.support.v7.widget.RecyclerView
