--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,20 +72,11 @@
                 android:background="#EAEAEA">
             </View>
 
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                card_view:cardCornerRadius="15dp"
-                card_view:cardElevation="5dp"
-                android:layout_marginBottom="7dp"
-                android:layout_marginTop="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp">
+
 
                 <LinearLayout
                     xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/home_my_layout"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -125,7 +116,7 @@
                             android:text="오프라인"/>
                     </LinearLayout>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+
 
 
             <View
