--- a/app/src/main/res/layout/char_room_item.xml
+++ b/app/src/main/res/layout/char_room_item.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp">
 
     <ImageView
+        android:id="@+id/chat_room_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/album"
@@ -26,6 +27,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:layout_marginLeft="8dp"
                 android:id="@+id/chatroom_click"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -35,7 +37,7 @@
                 <TextView
                     android:id="@+id/chat_room_name"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
@@ -44,7 +46,7 @@
                     android:layout_weight="1"
                     android:gravity="center|left"
                     android:textColor="@color/color_Black"
-                    android:textSize="13sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     tools:text="Name" />
 
@@ -60,7 +62,7 @@
                     android:layout_weight="1"
                     android:gravity="center|left"
                     android:textColor="@color/color_Gray"
-                    android:textSize="11sp"
+                    android:textSize="16sp"
                     tools:text="content" />
             </LinearLayout>
 
@@ -76,6 +78,6 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_Gray" />
+            android:background="@color/color_Lite_Gray" />
     </LinearLayout>
 </LinearLayout>
