--- a/app/src/main/res/layout/char_room_item.xml
+++ b/app/src/main/res/layout/char_room_item.xml
@@ -37,7 +37,7 @@
                 <TextView
                     android:id="@+id/chat_room_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="4dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
