--- a/app/src/main/res/layout/drawitem.xml
+++ b/app/src/main/res/layout/drawitem.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:orientation="horizontal"
     android:background="@color/color_White"
-    >
+    android:orientation="vertical">
 
-    <TextView
-        android:gravity="center"
-        android:textSize="18sp"
-        android:text="adasdsd"
-        android:textColor="@color/color_Black"
-        android:id="@+id/dday_content"
-        android:layout_weight="1"
-        android:background="@color/color_White"
-        android:layout_height="match_parent"
+    <LinearLayout
         android:layout_width="match_parent"
-        />
-    <TextView
-        android:gravity="center"
-        android:textSize="16sp"
-        android:text="adasdsd"
-        android:textColor="@color/color_Black"
-        android:id="@+id/dday_time"
-        android:layout_weight="1"
-        android:background="@color/color_White"
         android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/dday_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/color_White"
+            android:gravity="center"
+            android:text="adasdsd"
+            android:textColor="@color/color_Black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/dday_time"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/color_White"
+            android:gravity="center"
+            android:text="adasdsd"
+            android:textColor="@color/color_Black"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_Gray"
         android:layout_width="match_parent"
-        />
-</LinearLayout>
+        android:layout_height="1dp" />
+</RelativeLayout>
