앨범 ui설정 기존 다이얼로그 액티비티 ui색 설정 스타일 변경

--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -16,7 +16,7 @@
             android:textSize="22sp"
             android:textColor="#ffffff"
             android:gravity="center"
-            android:background="#a00ff7"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="53dp" />
     </LinearLayout>
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="방 이름  :  "
-                android:textColor="#000000"
+                android:textColor="#ffffff"
                 android:textSize="18dp"
                 />
             <EditText
@@ -75,22 +75,28 @@
             android:id="@+id/create_room_id_btn"
             android:text="확 인"
             android:textSize="15sp"
-            android:textColor="#a00ff7"
+            android:textColor="#ffffff"
             android:padding="16dp"
             android:gravity="center"
-            android:background="#00000000"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="53dp"
             android:layout_weight="1" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="53dp"
+            android:background="#f0f0d0"
+            />
 
         <Button
             android:id="@+id/create_room_id_cancle"
             android:text="취 소"
             android:textSize="15sp"
-            android:textColor="#a00ff7"
+            android:textColor="#ffffff"
             android:padding="16dp"
             android:gravity="center"
-            android:background="#00000000"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="53dp"
             android:layout_weight="1" />
