--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,11 +109,11 @@
                             />
                         <TextView
                             android:paddingTop="10dp"
-                            android:textColor="#FF0000"
+                            android:textColor="#ABE7AB"
                             android:id="@+id/home_user_stat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="오프라인"/>
+                            android:text="접속자 상태"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -152,10 +152,10 @@
         android:id="@+id/room_add_fab"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_alarm_add_black_24dp"
-        fab:fab_colorNormal="@color/fabPrimary"
-        fab:fab_colorPressed="@color/fabPressed"
-        fab:fab_colorRipple="@color/fabRipple"
+        android:src="@drawable/ic_group_add_black_24dp"
+        fab:fab_colorNormal="@color/colorPrimary"
+        fab:fab_colorPressed="@color/colorPrimaryPressed"
+        fab:fab_colorRipple="@color/colorPrimaryRipple"
         />
     </FrameLayout>
 </FrameLayout>
