--- a/app/src/main/res/drawable/button2.xml
+++ b/app/src/main/res/drawable/button2.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#8c9beb"/>
+    <solid android:color="#ffffff"/>
 
 
         />
     <corners
-        android:bottomRightRadius="15dp"
-        android:bottomLeftRadius="15dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"/>
-    <stroke android:width="0.8dp"
+        android:bottomRightRadius="7dp"
+        android:bottomLeftRadius="7dp"
+        android:topLeftRadius="7dp"
+        android:topRightRadius="7dp"/>
+    <stroke android:width="0.2dp"
         android:color="#898989"
 
         />
