--- a/app/src/main/res/drawable/button3.xml
+++ b/app/src/main/res/drawable/button3.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#ffffff"/>
+    <solid android:color="@color/colorPrimary"/>
 
 
         />
     <corners
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"/>
-    <stroke android:width="0.8dp"
-        android:color="#ffffff"
+        android:bottomRightRadius="7dp"
+        android:bottomLeftRadius="7dp"
+        android:topLeftRadius="7dp"
+        android:topRightRadius="7dp"/>
+    <stroke android:width="0.2dp"
+        android:color="#898989"
 
         />
-<!--
 
-    <selector>
+    <!--<selector>
         <item android:state_pressed="true" android:drawable="@drawable/bg_select"/>
         <item android:state_focused="true" android:drawable="@drawable/bg_select"/>
         <item android:state_pressed="true" android:drawable="@drawable/bg_select"/>
         <item android:drawable="@drawable/bg"/>
-    </selector>
--->
+    </selector>-->
 
 
 </shape>
