--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F7FF"
+    android:background="#C3E3CA"
     >
 
     <RelativeLayout
@@ -23,110 +23,119 @@
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_vertical"
-           android:text="W i t h   F a m i l y"
+
            android:textStyle="bold"
            android:textSize="35dp"
            android:textColor="#6fafbf"/>
 
    </LinearLayout>
 
-        <ImageView
+        <LinearLayout
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:id="@+id/login_img"
             android:layout_below="@+id/login_title"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/twitter"
-            />
+            android:orientation="vertical">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/title"/>
+
+        </LinearLayout>
+
 
         <LinearLayout
+            android:layout_centerInParent="true"
+            android:layout_marginTop="70dp"
             android:id="@+id/login_id_layout"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/login_img"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:background="@drawable/button2"
+            android:padding="5dp"
+            >
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="30dp"
-                android:background="@drawable/family"
-                android:layout_marginRight="10dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ID : "
+                android:text="       "
                 android:layout_gravity="center_vertical"/>
 
             <EditText
                 android:hint="아이디"
-                android:layout_width="160dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="+821041199582"
-                android:id="@+id/login_edit_id_text"/>
+                android:id="@+id/login_edit_id_text"
+                android:background="@null"
+                android:textSize="14dp"
+                />
 
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/login_pw_layout"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/login_id_layout"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:background="@drawable/button2"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            >
 
-            <TextView
+          <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PW : "
+                android:text="       "
                 android:layout_gravity="center_vertical"/>
 
             <EditText
+                android:background="@null"
                 android:hint="패스워드"
                 android:text="1234"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/login_edit_pw_text"/>
+                android:id="@+id/login_edit_pw_text"
+                android:textSize="14dp"/>
 
 
         </LinearLayout>
 
+
         <Button
+            android:layout_gravity="bottom"
             android:id="@+id/login_loginBtn"
-            android:layout_width="150dp"
-            android:layout_height="30dp"
+            android:layout_width="280dp"
+            android:layout_height="35dp"
             android:text="L o g i n "
+            android:textColor="@color/colorPrimary"
             android:textStyle="italic"
             android:layout_below="@+id/login_pw_layout"
             android:layout_centerInParent="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/button"/>
 
         <Button
             android:id="@+id/login_register"
-            android:layout_width="150dp"
-            android:layout_height="30dp"
+            android:layout_width="280dp"
+            android:layout_height="35dp"
             android:text="Resigter"
+            android:textColor="@color/colorPrimary"
             android:textStyle="italic"
             android:layout_below="@+id/login_loginBtn"
             android:layout_centerInParent="true"
             android:layout_marginTop="12dp"
             android:background="@drawable/button"/>
-
-        <Button
-            android:id="@+id/pratice"
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:text="pratice"
-            android:textStyle="italic"
-            android:layout_below="@+id/login_register"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/button"
-            android:onClick="showNotification"/>
-
     </RelativeLayout>
+
+
 </LinearLayout>
