--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -12,28 +12,13 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/home_frameLayout"
-        android:background="#FFFFFF">
+        android:id="@+id/home_frameLayout">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-           <!-- <TextView
-                android:id="@+id/first_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="가족 앨범"
-                android:textSize="25dp"
-                android:textAlignment="center"
-                android:background="#FFEBFE"/>-->
+        <!--app:layoutManager="StaggeredGridLayoutManager"
+        app:spanCount="3"-->
 
         <!-- TODO: Update blank fragment layout -->
         <android.support.v7.widget.RecyclerView
-            app:layoutManager="StaggeredGridLayoutManager"
-            app:spanCount="4"
             android:id="@+id/album_recycleview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,7 +27,7 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        </LinearLayout>
+
         <com.melnykov.fab.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
