--- a/app/src/main/res/layout/fragment_album_item.xml
+++ b/app/src/main/res/layout/fragment_album_item.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="15dp"
     card_view:cardElevation="5dp"
-    android:layout_marginBottom="7dp"
-    android:layout_marginTop="7dp"
-    android:layout_marginRight="7dp"
-    android:layout_marginLeft="7dp">
+    android:layout_marginBottom="3dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="3dp"
+    android:layout_marginLeft="3dp">
 
 
     <LinearLayout
@@ -17,18 +17,18 @@
         android:orientation="vertical"
         android:layout_gravity="center">
 
-        <TextView
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="text"
-            android:textAlignment="center"
-            android:id="@+id/album_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--     <TextView
+                 android:gravity="center"
+                 android:layout_gravity="center"
+                 android:text="text"
+                 android:textAlignment="center"
+                 android:id="@+id/album_textview"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content" />-->
 
         <ImageView
             android:id="@+id/album_imageview"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
