--- a/app/src/main/res/layout/fragment_album_item2.xml
+++ b/app/src/main/res/layout/fragment_album_item2.xml
@@ -1,17 +1,43 @@
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/Album_LinearLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="15dp"
+        card_view:cardElevation="5dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginLeft="7dp"
+        >
+
+    <TextView
+        android:id="@+id/first_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="날짜"
+        android:textSize="12dp"
+        android:textColor="#ffffff"
+        android:textAlignment="center"
+        android:background="@drawable/button3"
+        />
+    </android.support.v7.widget.CardView>
+
+
     <android.support.v7.widget.RecyclerView
-        app:layoutManager="StaggeredGridLayoutManager"
-        app:spanCount="3"
-        android:id="@+id/album_recycleview"
+        android:id="@+id/album_mid_recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
 
 
-</FrameLayout>
+</LinearLayout>
