--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#b0dab9</color>
+    <color name="colorPrimaryPressed">#bfdfbf</color>
+    <color name="colorPrimaryRipple">#dfdfbf</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_Black">#000000</color>
